--- a/7_coherence/src/max.Rmd
+++ b/7_coherence/src/max.Rmd
@@ -40,8 +40,6 @@ all_min <- min(unlist(data_only))
 all_sd <- sd(unlist(data_only))
 all_trials <- as.double(colMeans(data_only)) # compute channel means
 all_trials <- scaleData(all_trials)
-# all_trials <- all_trials * (1/sd(all_trials)) # set sd to 1
-# all_trials <- all_trials - min(all_trials) # set min value to 0
 
 # Creating a table to display all the p-values
 all_trials_color <- as.data.frame(all_trials) %>%
@@ -74,9 +72,6 @@ plot <- ggplot() +
                                  alpha = C,
                                  stroke = 0)) + 
   scale_size_continuous(name = "C")+ 
-                        # limits = c(0, 5)) +
-                        # breaks = c(20, 100, 200),
-                        # labels = c("0.05", "0.01", "0.005")) +
   guides(alpha = FALSE) +
   ylim(0, 900) +
   xlim(0, 900) +
@@ -206,46 +201,46 @@ ggsave(plot = plot, filename = '7_coherence/figs/constraint.png', width = 12, he
 #### Scaling by Absolute terms
  
 ```{r}
-# Try to scale by absolute terms
-sd_all <- sd(data_only)
-min_all <- min(data_only)
-
-scaleDataAbsolute <- function(data, min_all, sd_all) {
-  return((data-min_all)/sd_all)
-}
-
-S <- subset(coherr, condition = "S") %>% 
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-T <- subset(coherr, condition = "T") %>% 
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-M <- subset(coherr, condition = "M") %>% 
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-N <- subset(coherr, condition = "N") %>% 
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-L <- subset(coherr, condition = "L") %>%
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-H <- subset(coherr, condition = "H") %>%
-  scaleDataAbsolute(min_all, sd_all) %>%
-  colMeans()
-
-# Creating a table to display all the p-values
-by_condition <- data.frame(channels, S, T, M, N, L, H)
-by_condition_df <- mutate_if(by_condition, is.numeric, function(x) {round(x, digits = 2)}) %>%
-  mutate_if(is.numeric, function(x) {cell_spec(x, background = spec_color(x, 
-                                                                          direction = -1,
-                                                                          begin = 0.5,
-                                                                          end = 1,
-                                                                          option = "B",
-                                                                          scale_from = c(0, 6.2)))})
-
-kable(by_condition_df, escape = F, col.names = c("Channel", "S", "T", "M", "N", "S", "G")) %>%
-  add_header_above(c(" " = 1, "Talker" = 2, "Meaning" = 2, "Constraint" = 2)) %>%
-  kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
+# # Try to scale by absolute terms
+# sd_all <- sd(data_only)
+# min_all <- min(data_only)
+# 
+# scaleDataAbsolute <- function(data, min_all, sd_all) {
+#   return((data-min_all)/sd_all)
+# }
+# 
+# S <- subset(coherr, condition = "S") %>% 
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# T <- subset(coherr, condition = "T") %>% 
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# M <- subset(coherr, condition = "M") %>% 
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# N <- subset(coherr, condition = "N") %>% 
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# L <- subset(coherr, condition = "L") %>%
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# H <- subset(coherr, condition = "H") %>%
+#   scaleDataAbsolute(min_all, sd_all) %>%
+#   colMeans()
+# 
+# # Creating a table to display all the p-values
+# by_condition <- data.frame(channels, S, T, M, N, L, H)
+# by_condition_df <- mutate_if(by_condition, is.numeric, function(x) {round(x, digits = 2)}) %>%
+#   mutate_if(is.numeric, function(x) {cell_spec(x, background = spec_color(x, 
+#                                                                           direction = -1,
+#                                                                           begin = 0.5,
+#                                                                           end = 1,
+#                                                                           option = "B",
+#                                                                           scale_from = c(0, 6.2)))})
+# 
+# kable(by_condition_df, escape = F, col.names = c("Channel", "S", "T", "M", "N", "S", "G")) %>%
+#   add_header_above(c(" " = 1, "Talker" = 2, "Meaning" = 2, "Constraint" = 2)) %>%
+#   kable_styling(bootstrap_options = c("hover", "condensed"), full_width = F)
 ```
  
  
