--- a/4_test_cross_correlations/src/average.Rmd
+++ b/4_test_cross_correlations/src/average.Rmd
@@ -117,9 +117,9 @@ sum(H_w$p < 0.05)
 Compares cross correlations between the two levels of each condition. 
 
 ```{r}
-talker_w <- get_two_sample_wilcoxon(S, T, "two.sided")
-meaning_w <- get_two_sample_wilcoxon(M, N, "two.sided")
-constraint_w <- get_two_sample_wilcoxon(L, H, "two.sided")
+talker_w <- get_two_sample_wilcoxon(S, T)
+meaning_w <- get_two_sample_wilcoxon(M, N)
+constraint_w <- get_two_sample_wilcoxon(L, H)
 ```
 
 ```{r}
