--- a/4_test_cross_correlations/src/average_maps.Rmd
+++ b/4_test_cross_correlations/src/average_maps.Rmd
@@ -16,8 +16,12 @@ library("kableExtra")
 source("tools/functions.R")
 source("4_test_cross_correlations/src/functions.R")
 
+# Param
+ALT = "greater"
+
 # Import data
-load("4_test_cross_correlations/data/wilcoxon_results.RData")
+fpath = paste("4_test_cross_correlations/data/", ALT, "_wilcoxon_results.RData", sep = "")
+load(fpath) 
 ```
 
 #### One-sample t-tests for overall tracking
@@ -53,7 +57,8 @@ plot <- ggplot() +
         panel.grid.minor=element_blank(),
         plot.background=element_blank())
 plot
-ggsave(plot = plot, filename = 'figs/overall.png', width = 6, height = 5)
+fname = paste('figs/', ALT, '_overall.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 6, height = 5)
 ```
 
 #### One-sample and two-sample wilcoxon for each condition
@@ -124,11 +129,12 @@ get_map <- function(df, channels, nodiff_channels, levels_label) {
           plot.background=element_blank())
 }
 
-get_ps <- function(data, condition, channels){
+recode_ps <- function(ps, channels){
   recoded_ps <- c()
   for (i in 1:128) {
-    # Get p-value for channel i
-    p <- data[[condition]][i]
+    # # Get p-value for channel i
+    p <- ps[i]
+    # p <- data[[condition]][i]
 
     # Exit early if not in list of significant channels
     if (!(i %in% channels)) {recoded_ps[i] = NaN}
@@ -149,14 +155,14 @@ get_ps <- function(data, condition, channels){
 
 ```{r}
 # Identify channels that differentiate between same and different talker and channels that don't
-talker_channels <- get_sig_channels(two_sample_w, "talker")
+talker_channels <- get_sig_channels(talker_w$p)
 nodiff_talker_channels <- get_inverted_list(channels, talker_channels)
 
 # Get p-values for tracking within each level
-same_talker <- get_ps(one_sample_w, "S", talker_channels)
-different_talker <- get_ps(one_sample_w, "T", talker_channels)
-nodiff_same_talker <- get_ps(one_sample_w, "S", nodiff_talker_channels)
-nodiff_different_talker <- get_ps(one_sample_w, "T", nodiff_talker_channels)
+same_talker <- recode_ps(S_w$p, talker_channels)
+different_talker <- recode_ps(T_w$p, talker_channels)
+nodiff_same_talker <- recode_ps(S_w$p, nodiff_talker_channels)
+nodiff_different_talker <- recode_ps(T_w$p, nodiff_talker_channels)
 
 # Create data frame for bubbles
 talker_df <- data.frame(group1 = same_talker, group2 = different_talker, nodiff_group1 = nodiff_same_talker, nodiff_group2 = nodiff_different_talker, coordinates)
@@ -164,21 +170,22 @@ talker_df <- data.frame(group1 = same_talker, group2 = different_talker, nodiff_
 # Plot
 plot <- get_map(talker_df, talker_channels, nodiff_talker_channels, c("Different talker", "Same talker"))
 plot
-ggsave(plot = plot, filename = 'figs/talker.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_talker.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **meaning**
 
 ```{r}
 # Identify channels that differentiate between same and different talker and channels that don't
-meaning_channels <- get_sig_channels(two_sample_w, "meaning")
+meaning_channels <- get_sig_channels(meaning_w$p)
 nodiff_meaning_channels <- get_inverted_list(channels, meaning_channels)
 
 # Get p-values for tracking within each level
-meaningful <- get_ps(one_sample_w, "M", meaning_channels)
-nonsense <- get_ps(one_sample_w, "N", meaning_channels)
-nodiff_meaning <- get_ps(one_sample_w, "M", nodiff_meaning_channels)
-nodiff_nonsense <- get_ps(one_sample_w, "N", nodiff_meaning_channels)
+meaningful <- recode_ps(M_w$p, meaning_channels)
+nonsense <- recode_ps(N_w$p, meaning_channels)
+nodiff_meaning <- recode_ps(M_w$p, nodiff_meaning_channels)
+nodiff_nonsense <- recode_ps(N_w$p, nodiff_meaning_channels)
 
 # Create data frame for bubbles
 meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, nodiff_group1 = nodiff_meaning, nodiff_group2 = nodiff_nonsense, coordinates)
@@ -186,21 +193,22 @@ meaning_df <- data.frame(group1 = meaningful, group2 = nonsense, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_df, meaning_channels, nodiff_meaning_channels, c("Nonsense", "Meaningful"))
 plot
-ggsave(plot = plot, filename = 'figs/meaning.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_meaning.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **constraint**
 
 ```{r}
 # Identify channels that differentiate between same and different talker and channels that don't
-constraint_channels <- get_sig_channels(two_sample_w, "constraint")
+constraint_channels <- get_sig_channels(constraint_w$p)
 nodiff_constraint <- get_inverted_list(channels, constraint_channels)
 
 # Get p-values for tracking within each level
-low <- get_ps(one_sample_w, "L", constraint_channels)
-high <- get_ps(one_sample_w, "H", constraint_channels)
-nodiff_low <- get_ps(one_sample_w, "L", nodiff_constraint)
-nodiff_high <- get_ps(one_sample_w, "H", nodiff_constraint)
+low <- get_ps(L_w$p, constraint_channels)
+high <- get_ps(H_w$p, constraint_channels)
+nodiff_low <- get_ps(L_w$p, nodiff_constraint)
+nodiff_high <- get_ps(H_w$p, nodiff_constraint)
 
 # Create data frame for bubbles
 constraint_df <- data.frame(group1 = low, group2 = high, nodiff_group1 = nodiff_low, nodiff_group2 = nodiff_high, coordinates)
@@ -208,7 +216,8 @@ constraint_df <- data.frame(group1 = low, group2 = high, nodiff_group1 = nodiff_
 # Plot
 plot <- get_map(constraint_df, constraint_channels, nodiff_constraint, c("High constraint", "Low constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/constraint.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_constraint.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **stats**
@@ -257,7 +266,8 @@ talker_L_interaction_df <- data.frame(group1 = SL, group2 = TL, nodiff_group1 = 
 # Plot
 plot <- get_map(talker_L_interaction_df, talker_L_interaction_channels, nodiff_talker_L_interaction_channels, c("Different talker low constraint", "Same-talker low constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/talker_L.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_talker_L.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **Talker and high constraint**
@@ -278,7 +288,8 @@ talker_H_interaction_df <- data.frame(group1 = SH, group2 = TH, nodiff_group1 = 
 # Plot
 plot <- get_map(talker_H_interaction_df, talker_H_interaction_channels, nodiff_talker_H_interaction_channels, c("Different talker high constraint", "Same-talker high constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/talker_H.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_talker_H.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **Meaning and low constraint**
@@ -300,7 +311,8 @@ meaning_L_interaction_df <- data.frame(group1 = ML, group2 = NL, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_L_interaction_df, meaning_L_interaction_channels, nodiff_meaning_L_interaction_channels, c("Nonsense low constraint", "Meaningful low constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/meaning_L.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_meaning_L.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 **Meaning and high constraint**
@@ -322,7 +334,8 @@ meaning_H_interaction_df <- data.frame(group1 = MH, group2 = NH, nodiff_group1 =
 # Plot
 plot <- get_map(meaning_H_interaction_df, meaning_H_interaction_channels, nodiff_meaning_H_interaction_channels, c("Nonsense high constraint", "Meaningful high constraint"))
 plot
-ggsave(plot = plot, filename = 'figs/meaning_H.png', width = 12, height = 5)
+fname = paste('figs/', ALT, '_meaning_H.png', sep = "")
+ggsave(plot = plot, filename = fname, width = 12, height = 5)
 ```
 
 #### T-tests against difference set by low vs high-constraint sentences
